syntax = "proto3";

option go_package = "../service";
package service;
message tiktok_feed_request{
  optional int64 latest_time = 1;
  optional string token = 2;
}

message tiktok_feed_response {
  int32 status_code = 1;
  optional string status_msg = 2;
  repeated Video video_list = 3;
  optional int64 next_time = 4;
}

message Video {
  int64 id = 1;
  User author = 2;
  string play_url = 3;
  string cover_url = 4;
  int64 favorite_count = 5;
  int64 comment_count = 6;
  bool is_favorite = 7;
  string title = 8;
}

message User {
  int64 id = 1;
  string name = 2;
  optional int64 follow_count = 3;  // 关注总数
  optional int64 follower_count = 4;  // 粉丝总数
  bool is_follow = 5;
}


service Feed {
  rpc feedVideo (tiktok_feed_request) returns (tiktok_feed_response);
}